src/frontend.h

int poly_uop_n_src(PolyUOp *u);
PolyUOp *poly_uop_src(PolyUOp *u, int idx);