py/polygrad/_ffi.py


    # --- Autograd ---
    lib.poly_grad.restype = _ptr
    lib.poly_grad.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_uop_substitute.restype = _ptr
    lib.poly_uop_substitute.argtypes = [_ptr, _ptr, ctypes.POINTER(_ptr), ctypes.POINTER(_ptr), ctypes.c_int]

    lib.poly_grad_many.restype = ctypes.c_int
    lib.poly_grad_many.argtypes = [_ptr, _ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.POINTER(_ptr)]

    lib.poly_grad_many_ex.restype = ctypes.c_int
    lib.poly_grad_many_ex.argtypes = [
        _ptr, _ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int,
        ctypes.POINTER(_ptr), ctypes.POINTER(ctypes.c_uint8),
    ]

    # --- UOp identity helpers ---
    lib.poly_uop_has_buffer_identity.restype = ctypes.c_bool
    lib.poly_uop_has_buffer_identity.argtypes = [_ptr]

    lib.poly_uop_get_buffer_identity.restype = _ptr
    lib.poly_uop_get_buffer_identity.argtypes = [_ptr]

    lib.poly_uop_buffer.restype = _ptr
    lib.poly_uop_buffer.argtypes = [_ptr, _ptr]

    lib.poly_uop_reachable.restype = ctypes.c_bool
    lib.poly_uop_reachable.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_uop_n_src.restype = ctypes.c_int
    lib.poly_uop_n_src.argtypes = [_ptr]

    lib.poly_uop_src.restype = _ptr
    lib.poly_uop_src.argtypes = [_ptr, ctypes.c_int]

    # --- Side-table buffer API (device.h) ---
    lib.poly_buffer_set.restype = None
    lib.poly_buffer_set.argtypes = [_ptr, _ptr, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_int]

    lib.poly_buffer_get_ptr.restype = ctypes.c_void_p
    lib.poly_buffer_get_ptr.argtypes = [_ptr, _ptr]

    lib.poly_buffer_get_key.restype = ctypes.c_uint64
    lib.poly_buffer_get_key.argtypes = [_ptr, _ptr]

    lib.poly_buffer_ensure_device_allocated.restype = ctypes.c_int
    lib.poly_buffer_ensure_device_allocated.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_buffer_read.restype = ctypes.c_int
    lib.poly_buffer_read.argtypes = [_ptr, _ptr, ctypes.c_void_p, ctypes.c_size_t]

    lib.poly_buffer_write.restype = ctypes.c_int
    lib.poly_buffer_write.argtypes = [_ptr, _ptr, ctypes.c_void_p, ctypes.c_size_t]

    lib.poly_buffer_from_host.restype = _ptr
    lib.poly_buffer_from_host.argtypes = [
        _ptr, ctypes.c_void_p, ctypes.c_size_t, ctypes.c_int, _i64p, ctypes.c_int,
    ]

    lib.poly_buffer_from_file.restype = _ptr
    lib.poly_buffer_from_file.argtypes = [_ptr, ctypes.c_char_p, ctypes.c_int]

    lib.poly_set_frontend_buffer_release.restype = None
    lib.poly_set_frontend_buffer_release.argtypes = [PolyFrontendBufferReleaseFn]

    lib.poly_buffer_get.restype = _ptr
    lib.poly_buffer_get.argtypes = [_ptr, _ptr]

    lib.poly_buffer_is_allocated.restype = ctypes.c_bool
    lib.poly_buffer_is_allocated.argtypes = [_ptr, _ptr]

    # --- Graph-driven realization and core frontend tensors ---
    lib.poly_realize_uops.restype = ctypes.c_int
    lib.poly_realize_uops.argtypes = [_ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.POINTER(_ptr)]

    lib.poly_tensor_create_with_roots.restype = _ptr
    lib.poly_tensor_create_with_roots.argtypes = [_ptr, _ptr, _ptr, ctypes.c_int, ctypes.c_int]

    lib.poly_tensor_replace_roots.restype = ctypes.c_int
    lib.poly_tensor_replace_roots.argtypes = [
        _ptr, _ptr, _ptr, _ptr, ctypes.c_int, ctypes.c_int,
    ]

    lib.poly_tensor_to_device.restype = _ptr
    lib.poly_tensor_to_device.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_assign.restype = _ptr
    lib.poly_tensor_assign.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_tensor_alu1.restype = _ptr
    lib.poly_tensor_alu1.argtypes = [_ptr, ctypes.c_int, _ptr]

    lib.poly_tensor_alu2.restype = _ptr
    lib.poly_tensor_alu2.argtypes = [_ptr, ctypes.c_int, _ptr, _ptr]

    lib.poly_tensor_alu3.restype = _ptr
    lib.poly_tensor_alu3.argtypes = [_ptr, ctypes.c_int, _ptr, _ptr, _ptr]

    lib.poly_tensor_div.restype = _ptr
    lib.poly_tensor_div.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_tensor_exp.restype = _ptr
    lib.poly_tensor_exp.argtypes = [_ptr, _ptr]

    lib.poly_tensor_log.restype = _ptr
    lib.poly_tensor_log.argtypes = [_ptr, _ptr]

    lib.poly_tensor_log1p.restype = _ptr
    lib.poly_tensor_log1p.argtypes = [_ptr, _ptr]

    lib.poly_tensor_expm1.restype = _ptr
    lib.poly_tensor_expm1.argtypes = [_ptr, _ptr]

    lib.poly_tensor_gelu.restype = _ptr
    lib.poly_tensor_gelu.argtypes = [_ptr, _ptr]

    lib.poly_tensor_quick_gelu.restype = _ptr
    lib.poly_tensor_quick_gelu.argtypes = [_ptr, _ptr]

    lib.poly_tensor_detach.restype = _ptr
    lib.poly_tensor_detach.argtypes = [_ptr, _ptr]

    lib.poly_tensor_contiguous_backward.restype = _ptr
    lib.poly_tensor_contiguous_backward.argtypes = [_ptr, _ptr]

    lib.poly_tensor_custom_kernel.restype = ctypes.c_int
    lib.poly_tensor_custom_kernel.argtypes = [
        _ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.POINTER(_ptr),
    ]

    lib.poly_tensor_function.restype = ctypes.c_int
    lib.poly_tensor_function.argtypes = [
        _ptr, ctypes.POINTER(_ptr), ctypes.c_int,
        ctypes.POINTER(_ptr), ctypes.c_int,
        ctypes.c_char_p, ctypes.c_bool, ctypes.c_bool, ctypes.c_bool,
        ctypes.POINTER(_ptr),
    ]

    lib.poly_tensor_sum.restype = _ptr
    lib.poly_tensor_sum.argtypes = [_ptr, _ptr, _i64p, ctypes.c_int, ctypes.c_bool]

    lib.poly_tensor_sum_dtype_by_id.restype = _ptr
    lib.poly_tensor_sum_dtype_by_id.argtypes = [
        _ptr, _ptr, _i64p, ctypes.c_int, ctypes.c_bool, ctypes.c_int,
    ]

    lib.poly_tensor_max.restype = _ptr
    lib.poly_tensor_max.argtypes = [_ptr, _ptr, _i64p, ctypes.c_int, ctypes.c_bool]

    lib.poly_tensor_argmax.restype = _ptr
    lib.poly_tensor_argmax.argtypes = [_ptr, _ptr, ctypes.c_int, ctypes.c_bool]

    lib.poly_tensor_minimum.restype = _ptr
    lib.poly_tensor_minimum.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_tensor_dot.restype = _ptr
    lib.poly_tensor_dot.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_tensor_dot_dtype_by_id.restype = _ptr
    lib.poly_tensor_dot_dtype_by_id.argtypes = [_ptr, _ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_qr_ex.restype = ctypes.c_int
    lib.poly_tensor_qr_ex.argtypes = [_ptr, _ptr, ctypes.c_int, _ptrp, _ptrp]

    lib.poly_tensor_triangular_solve.restype = _ptr
    lib.poly_tensor_triangular_solve.argtypes = [
        _ptr, _ptr, _ptr,
        ctypes.c_int, ctypes.c_int, ctypes.c_int,
    ]

    lib.poly_tensor_cholesky.restype = _ptr
    lib.poly_tensor_cholesky.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_cholesky_solve.restype = _ptr
    lib.poly_tensor_cholesky_solve.argtypes = [_ptr, _ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_solve.restype = _ptr
    lib.poly_tensor_solve.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_tensor_lstsq.restype = _ptr
    lib.poly_tensor_lstsq.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_tensor_scatter.restype = _ptr
    lib.poly_tensor_scatter.argtypes = [
        _ptr, _ptr, ctypes.c_int, _ptr, _ptr, ctypes.c_char_p,
    ]

    lib.poly_tensor_scatter_reduce.restype = _ptr
    lib.poly_tensor_scatter_reduce.argtypes = [
        _ptr, _ptr, ctypes.c_int, _ptr, _ptr, ctypes.c_char_p, ctypes.c_int,
    ]

    lib.poly_tensor_einsum.restype = _ptr
    lib.poly_tensor_einsum.argtypes = [
        _ptr, ctypes.c_char_p, ctypes.POINTER(_ptr), ctypes.c_int,
    ]

    lib.poly_tensor_sort.restype = ctypes.c_int
    lib.poly_tensor_sort.argtypes = [
        _ptr, _ptr, ctypes.c_int, ctypes.c_int, _ptrp, _ptrp
    ]

    lib.poly_tensor_topk.restype = ctypes.c_int
    lib.poly_tensor_topk.argtypes = [
        _ptr, _ptr, ctypes.c_int64, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        _ptrp, _ptrp
    ]

    lib.poly_tensor_softmax.restype = _ptr
    lib.poly_tensor_softmax.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_log_softmax.restype = _ptr
    lib.poly_tensor_log_softmax.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_cast_by_id.restype = _ptr
    lib.poly_tensor_cast_by_id.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_bitcast_by_id.restype = _ptr
    lib.poly_tensor_bitcast_by_id.argtypes = [_ptr, _ptr, ctypes.c_int]

    lib.poly_tensor_contiguous.restype = _ptr
    lib.poly_tensor_contiguous.argtypes = [_ptr, _ptr]

    lib.poly_tensor_reshape.restype = _ptr
    lib.poly_tensor_reshape.argtypes = [_ptr, _ptr, _i64p, ctypes.c_int]

    lib.poly_tensor_reshape_uop.restype = _ptr
    lib.poly_tensor_reshape_uop.argtypes = [
        _ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int,
    ]

    lib.poly_tensor_expand.restype = _ptr
    lib.poly_tensor_expand.argtypes = [_ptr, _ptr, _i64p, ctypes.c_int]

    lib.poly_tensor_expand_uop.restype = _ptr
    lib.poly_tensor_expand_uop.argtypes = [
        _ptr, _ptr, ctypes.POINTER(_ptr), ctypes.c_int,
    ]

    lib.poly_tensor_permute.restype = _ptr
    lib.poly_tensor_permute.argtypes = [_ptr, _ptr, _i64p, ctypes.c_int]

    lib.poly_tensor_shrink.restype = _ptr
    lib.poly_tensor_shrink.argtypes = [_ptr, _ptr, ctypes.c_void_p, ctypes.c_int]

    lib.poly_tensor_shrink_uop.restype = _ptr
    lib.poly_tensor_shrink_uop.argtypes = [
        _ptr, _ptr, ctypes.POINTER(_ptr), ctypes.POINTER(_ptr), ctypes.c_int,
    ]

    lib.poly_tensor_flip.restype = _ptr
    lib.poly_tensor_flip.argtypes = [_ptr, _ptr, _i64p, ctypes.c_int]

    lib.poly_tensor_pad_value.restype = _ptr
    lib.poly_tensor_pad_value.argtypes = [
        _ptr, _ptr, ctypes.c_void_p, ctypes.c_int, ctypes.c_double,
    ]

    lib.poly_tensor_pool.restype = _ptr
    lib.poly_tensor_pool.argtypes = [_ptr, _ptr, _i64p, ctypes.c_int, _i64p, _i64p]

    lib.poly_tensor_max_pool2d.restype = _ptr
    lib.poly_tensor_max_pool2d.argtypes = [
        _ptr, _ptr, _i64p, ctypes.c_int, _i64p, _i64p, _i64p, ctypes.c_int,
    ]

    lib.poly_tensor_conv2d.restype = _ptr
    lib.poly_tensor_conv2d.argtypes = [
        _ptr, _ptr, _ptr, _ptr, ctypes.c_int, _i64p, _i64p, _i64p, ctypes.c_int,
    ]
    lib.poly_tensor_conv2d_dtype_by_id.restype = _ptr
    lib.poly_tensor_conv2d_dtype_by_id.argtypes = [
        _ptr, _ptr, _ptr, _ptr, ctypes.c_int, _i64p, _i64p, _i64p, ctypes.c_int,
        ctypes.c_int,
    ]

    lib.poly_tensor_batchnorm.restype = _ptr
    lib.poly_tensor_batchnorm.argtypes = [
        _ptr, _ptr, _ptr, _ptr, _ptr, _ptr, _i64p, ctypes.c_int,
    ]

    lib.poly_tensor_one_hot.restype = _ptr
    lib.poly_tensor_one_hot.argtypes = [_ptr, _ptr, ctypes.c_int64]

    lib.poly_tensor_gather_dim.restype = _ptr
    lib.poly_tensor_gather_dim.argtypes = [_ptr, _ptr, ctypes.c_int, _ptr]

    lib.poly_tensor_index_select.restype = _ptr
    lib.poly_tensor_index_select.argtypes = [_ptr, _ptr, ctypes.c_int, _ptr]

    lib.poly_tensor_clone_into.restype = _ptr
    lib.poly_tensor_clone_into.argtypes = [_ptr, _ptr, _ptr]

    lib.poly_tensor_uop.restype = _ptr
    lib.poly_tensor_uop.argtypes = [_ptr]

    lib.poly_tensor_uop_logical.restype = _ptr
    lib.poly_tensor_uop_logical.argtypes = [_ptr]

    lib.poly_tensor_uop_physical.restype = _ptr
    lib.poly_tensor_uop_physical.argtypes = [_ptr]

    lib.poly_tensor_device.restype = ctypes.c_int
    lib.poly_tensor_device.argtypes = [_ptr]

    lib.poly_tensor_requires_grad.restype = ctypes.c_bool
    lib.poly_tensor_requires_grad.argtypes = [_ptr]

    lib.poly_tensor_requires_grad_is_set.restype = ctypes.c_bool
    lib.poly_tensor_requires_grad_is_set.argtypes = [_ptr]

    lib.poly_tensor_set_requires_grad.restype = None
    lib.poly_tensor_set_requires_grad.argtypes = [_ptr, ctypes.c_bool]

    lib.poly_realize_tensors.restype = ctypes.c_int
    lib.poly_realize_tensors.argtypes = [
        _ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.POINTER(_ptr)
    ]
    lib.poly_realize_tensors_ex.restype = ctypes.c_int
    lib.poly_realize_tensors_ex.argtypes = [
        _ptr, ctypes.POINTER(_ptr), ctypes.c_int, ctypes.POINTER(_ptr), ctypes.c_bool
    ]

    # --- Raw Tensor JIT capture/replay ---
    lib.poly_jit_new.restype = _ptr
    lib.poly_jit_new.argtypes = [_ptr]
